APIs/googleapis.com/tagmanager/v1/javascript-client/README.md
# tag_manager_api

TagManagerApi - JavaScript client for tag_manager_api
This API allows clients to access and modify container and tag configuration.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1
- Package version: v1
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install tag_manager_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your tag_manager_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var TagManagerApi = require('tag_manager_api');

var defaultClient = TagManagerApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new TagManagerApi.AccountsApi()
var accountId = "accountId_example"; // {String} The GTM Account ID.
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'container': new TagManagerApi.Container() // {Container} 
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.tagmanagerAccountsContainersCreate(accountId, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://tagmanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersCreate) | **POST** /tagmanager/v1/accounts/{accountId}/containers | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersDelete**](docs/AccountsApi.md#tagmanagerAccountsContainersDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsCreate) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsDelete**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments/{environmentId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsGet**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsGet) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments/{environmentId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsList**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsList) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/environments/{environmentId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersFoldersCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersFoldersCreate) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersFoldersDelete**](docs/AccountsApi.md#tagmanagerAccountsContainersFoldersDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders/{folderId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersFoldersEntitiesList**](docs/AccountsApi.md#tagmanagerAccountsContainersFoldersEntitiesList) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders/{folderId}/entities | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersFoldersGet**](docs/AccountsApi.md#tagmanagerAccountsContainersFoldersGet) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders/{folderId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersFoldersList**](docs/AccountsApi.md#tagmanagerAccountsContainersFoldersList) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersFoldersUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersFoldersUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/folders/{folderId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersGet**](docs/AccountsApi.md#tagmanagerAccountsContainersGet) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersList**](docs/AccountsApi.md#tagmanagerAccountsContainersList) | **GET** /tagmanager/v1/accounts/{accountId}/containers | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersMoveFoldersUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersMoveFoldersUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/move_folders/{folderId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersReauthorizeEnvironmentsUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersReauthorizeEnvironmentsUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/reauthorize_environments/{environmentId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersTagsCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersTagsCreate) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersTagsDelete**](docs/AccountsApi.md#tagmanagerAccountsContainersTagsDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags/{tagId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersTagsGet**](docs/AccountsApi.md#tagmanagerAccountsContainersTagsGet) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags/{tagId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersTagsList**](docs/AccountsApi.md#tagmanagerAccountsContainersTagsList) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersTagsUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersTagsUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/tags/{tagId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersTriggersCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersTriggersCreate) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersTriggersDelete**](docs/AccountsApi.md#tagmanagerAccountsContainersTriggersDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers/{triggerId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersTriggersGet**](docs/AccountsApi.md#tagmanagerAccountsContainersTriggersGet) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers/{triggerId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersTriggersList**](docs/AccountsApi.md#tagmanagerAccountsContainersTriggersList) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersTriggersUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersTriggersUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/triggers/{triggerId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVariablesCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersVariablesCreate) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVariablesDelete**](docs/AccountsApi.md#tagmanagerAccountsContainersVariablesDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables/{variableId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVariablesGet**](docs/AccountsApi.md#tagmanagerAccountsContainersVariablesGet) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables/{variableId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVariablesList**](docs/AccountsApi.md#tagmanagerAccountsContainersVariablesList) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVariablesUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersVariablesUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/variables/{variableId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVersionsCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsCreate) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVersionsDelete**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVersionsGet**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsGet) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVersionsList**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsList) | **GET** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVersionsPublish**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsPublish) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId}/publish | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVersionsRestore**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsRestore) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId}/restore | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVersionsUndelete**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsUndelete) | **POST** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId}/undelete | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVersionsUpdate**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/containers/{containerId}/versions/{containerVersionId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsGet**](docs/AccountsApi.md#tagmanagerAccountsGet) | **GET** /tagmanager/v1/accounts/{accountId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsList**](docs/AccountsApi.md#tagmanagerAccountsList) | **GET** /tagmanager/v1/accounts | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsPermissionsCreate**](docs/AccountsApi.md#tagmanagerAccountsPermissionsCreate) | **POST** /tagmanager/v1/accounts/{accountId}/permissions | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsPermissionsDelete**](docs/AccountsApi.md#tagmanagerAccountsPermissionsDelete) | **DELETE** /tagmanager/v1/accounts/{accountId}/permissions/{permissionId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsPermissionsGet**](docs/AccountsApi.md#tagmanagerAccountsPermissionsGet) | **GET** /tagmanager/v1/accounts/{accountId}/permissions/{permissionId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsPermissionsList**](docs/AccountsApi.md#tagmanagerAccountsPermissionsList) | **GET** /tagmanager/v1/accounts/{accountId}/permissions | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsPermissionsUpdate**](docs/AccountsApi.md#tagmanagerAccountsPermissionsUpdate) | **PUT** /tagmanager/v1/accounts/{accountId}/permissions/{permissionId} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsUpdate**](docs/AccountsApi.md#tagmanagerAccountsUpdate) | **PUT** /tagmanager/v1/accounts/{accountId} | 


## Documentation for Models

 - [TagManagerApi.Account](docs/Account.md)
 - [TagManagerApi.AccountAccess](docs/AccountAccess.md)
 - [TagManagerApi.Condition](docs/Condition.md)
 - [TagManagerApi.Container](docs/Container.md)
 - [TagManagerApi.ContainerAccess](docs/ContainerAccess.md)
 - [TagManagerApi.ContainerVersion](docs/ContainerVersion.md)
 - [TagManagerApi.ContainerVersionHeader](docs/ContainerVersionHeader.md)
 - [TagManagerApi.CreateContainerVersionRequestVersionOptions](docs/CreateContainerVersionRequestVersionOptions.md)
 - [TagManagerApi.CreateContainerVersionResponse](docs/CreateContainerVersionResponse.md)
 - [TagManagerApi.Environment](docs/Environment.md)
 - [TagManagerApi.Folder](docs/Folder.md)
 - [TagManagerApi.FolderEntities](docs/FolderEntities.md)
 - [TagManagerApi.ListAccountUsersResponse](docs/ListAccountUsersResponse.md)
 - [TagManagerApi.ListAccountsResponse](docs/ListAccountsResponse.md)
 - [TagManagerApi.ListContainerVersionsResponse](docs/ListContainerVersionsResponse.md)
 - [TagManagerApi.ListContainersResponse](docs/ListContainersResponse.md)
 - [TagManagerApi.ListEnvironmentsResponse](docs/ListEnvironmentsResponse.md)
 - [TagManagerApi.ListFoldersResponse](docs/ListFoldersResponse.md)
 - [TagManagerApi.ListTagsResponse](docs/ListTagsResponse.md)
 - [TagManagerApi.ListTriggersResponse](docs/ListTriggersResponse.md)
 - [TagManagerApi.ListVariablesResponse](docs/ListVariablesResponse.md)
 - [TagManagerApi.Macro](docs/Macro.md)
 - [TagManagerApi.Parameter](docs/Parameter.md)
 - [TagManagerApi.PublishContainerVersionResponse](docs/PublishContainerVersionResponse.md)
 - [TagManagerApi.Rule](docs/Rule.md)
 - [TagManagerApi.SetupTag](docs/SetupTag.md)
 - [TagManagerApi.Tag](docs/Tag.md)
 - [TagManagerApi.TeardownTag](docs/TeardownTag.md)
 - [TagManagerApi.Trigger](docs/Trigger.md)
 - [TagManagerApi.UserAccess](docs/UserAccess.md)
 - [TagManagerApi.Variable](docs/Variable.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/tagmanager.delete.containers: Delete your Google Tag Manager containers
  - https://www.googleapis.com/auth/tagmanager.edit.containers: Manage your Google Tag Manager container and its subcomponents, excluding versioning and publishing
  - https://www.googleapis.com/auth/tagmanager.edit.containerversions: Manage your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.manage.accounts: View and manage your Google Tag Manager accounts
  - https://www.googleapis.com/auth/tagmanager.manage.users: Manage user permissions of your Google Tag Manager account and container
  - https://www.googleapis.com/auth/tagmanager.publish: Publish your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.readonly: View your Google Tag Manager container and its subcomponents

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/tagmanager.delete.containers: Delete your Google Tag Manager containers
  - https://www.googleapis.com/auth/tagmanager.edit.containers: Manage your Google Tag Manager container and its subcomponents, excluding versioning and publishing
  - https://www.googleapis.com/auth/tagmanager.edit.containerversions: Manage your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.manage.accounts: View and manage your Google Tag Manager accounts
  - https://www.googleapis.com/auth/tagmanager.manage.users: Manage user permissions of your Google Tag Manager account and container
  - https://www.googleapis.com/auth/tagmanager.publish: Publish your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.readonly: View your Google Tag Manager container and its subcomponents

