APIs/googleapis.com/tagmanager/v2/javascript-client/README.md
# tag_manager_api

TagManagerApi - JavaScript client for tag_manager_api
This API allows clients to access and modify container and tag configuration.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2
- Package version: v2
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install tag_manager_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your tag_manager_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var TagManagerApi = require('tag_manager_api');

var defaultClient = TagManagerApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new TagManagerApi.AccountsApi()
var path = "path_example"; // {String} GTM Container's API relative path. Example: accounts/{account_id}/containers/{container_id}
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'allowUserPermissionFeatureUpdate': true, // {Boolean} Must be set to true to allow features.user_permissions to change from false to true. If this operation causes an update but this bit is false, the operation will fail.
  'containerId': "containerId_example", // {String} ID of container that will be merged into the current container.
  'settingSource': "settingSource_example" // {String} Specify the source of config setting after combine
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.tagmanagerAccountsContainersCombine(path, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://tagmanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersCombine**](docs/AccountsApi.md#tagmanagerAccountsContainersCombine) | **POST** /tagmanager/v2/{path}:combine | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersCreate) | **POST** /tagmanager/v2/{parent}/containers | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersDestinationsLink**](docs/AccountsApi.md#tagmanagerAccountsContainersDestinationsLink) | **POST** /tagmanager/v2/{parent}/destinations:link | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersDestinationsList**](docs/AccountsApi.md#tagmanagerAccountsContainersDestinationsList) | **GET** /tagmanager/v2/{parent}/destinations | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsCreate) | **POST** /tagmanager/v2/{parent}/environments | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsList**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsList) | **GET** /tagmanager/v2/{parent}/environments | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersEnvironmentsReauthorize**](docs/AccountsApi.md#tagmanagerAccountsContainersEnvironmentsReauthorize) | **POST** /tagmanager/v2/{path}:reauthorize | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersList**](docs/AccountsApi.md#tagmanagerAccountsContainersList) | **GET** /tagmanager/v2/{parent}/containers | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersLookup**](docs/AccountsApi.md#tagmanagerAccountsContainersLookup) | **GET** /tagmanager/v2/accounts/containers:lookup | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersMoveTagId**](docs/AccountsApi.md#tagmanagerAccountsContainersMoveTagId) | **POST** /tagmanager/v2/{path}:move_tag_id | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersSnippet**](docs/AccountsApi.md#tagmanagerAccountsContainersSnippet) | **GET** /tagmanager/v2/{path}:snippet | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVersionHeadersLatest**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionHeadersLatest) | **GET** /tagmanager/v2/{parent}/version_headers:latest | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVersionHeadersList**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionHeadersList) | **GET** /tagmanager/v2/{parent}/version_headers | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVersionsLive**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsLive) | **GET** /tagmanager/v2/{parent}/versions:live | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVersionsPublish**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsPublish) | **POST** /tagmanager/v2/{path}:publish | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVersionsSetLatest**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsSetLatest) | **POST** /tagmanager/v2/{path}:set_latest | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersVersionsUndelete**](docs/AccountsApi.md#tagmanagerAccountsContainersVersionsUndelete) | **POST** /tagmanager/v2/{path}:undelete | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesBuiltInVariablesCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesBuiltInVariablesCreate) | **POST** /tagmanager/v2/{parent}/built_in_variables | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesBuiltInVariablesList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesBuiltInVariablesList) | **GET** /tagmanager/v2/{parent}/built_in_variables | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesBuiltInVariablesRevert**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesBuiltInVariablesRevert) | **POST** /tagmanager/v2/{path}/built_in_variables:revert | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesClientsCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesClientsCreate) | **POST** /tagmanager/v2/{parent}/clients | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesClientsList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesClientsList) | **GET** /tagmanager/v2/{parent}/clients | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesCreate) | **POST** /tagmanager/v2/{parent}/workspaces | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesCreateVersion**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesCreateVersion) | **POST** /tagmanager/v2/{path}:create_version | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesFoldersCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesFoldersCreate) | **POST** /tagmanager/v2/{parent}/folders | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesFoldersEntities**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesFoldersEntities) | **POST** /tagmanager/v2/{path}:entities | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesFoldersList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesFoldersList) | **GET** /tagmanager/v2/{parent}/folders | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesFoldersMoveEntitiesToFolder**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesFoldersMoveEntitiesToFolder) | **POST** /tagmanager/v2/{path}:move_entities_to_folder | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesGetStatus**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesGetStatus) | **GET** /tagmanager/v2/{path}/status | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesGtagConfigCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesGtagConfigCreate) | **POST** /tagmanager/v2/{parent}/gtag_config | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesGtagConfigList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesGtagConfigList) | **GET** /tagmanager/v2/{parent}/gtag_config | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesList) | **GET** /tagmanager/v2/{parent}/workspaces | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesQuickPreview**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesQuickPreview) | **POST** /tagmanager/v2/{path}:quick_preview | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesResolveConflict**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesResolveConflict) | **POST** /tagmanager/v2/{path}:resolve_conflict | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesSync**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesSync) | **POST** /tagmanager/v2/{path}:sync | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTagsCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTagsCreate) | **POST** /tagmanager/v2/{parent}/tags | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTagsList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTagsList) | **GET** /tagmanager/v2/{parent}/tags | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTemplatesCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTemplatesCreate) | **POST** /tagmanager/v2/{parent}/templates | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTemplatesList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTemplatesList) | **GET** /tagmanager/v2/{parent}/templates | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTransformationsCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTransformationsCreate) | **POST** /tagmanager/v2/{parent}/transformations | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTransformationsList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTransformationsList) | **GET** /tagmanager/v2/{parent}/transformations | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTriggersCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTriggersCreate) | **POST** /tagmanager/v2/{parent}/triggers | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesTriggersList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesTriggersList) | **GET** /tagmanager/v2/{parent}/triggers | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesVariablesCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesVariablesCreate) | **POST** /tagmanager/v2/{parent}/variables | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesVariablesList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesVariablesList) | **GET** /tagmanager/v2/{parent}/variables | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesZonesCreate**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesZonesCreate) | **POST** /tagmanager/v2/{parent}/zones | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesZonesList**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesZonesList) | **GET** /tagmanager/v2/{parent}/zones | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsContainersWorkspacesZonesRevert**](docs/AccountsApi.md#tagmanagerAccountsContainersWorkspacesZonesRevert) | **POST** /tagmanager/v2/{path}:revert | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsList**](docs/AccountsApi.md#tagmanagerAccountsList) | **GET** /tagmanager/v2/accounts | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsUserPermissionsCreate**](docs/AccountsApi.md#tagmanagerAccountsUserPermissionsCreate) | **POST** /tagmanager/v2/{parent}/user_permissions | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsUserPermissionsDelete**](docs/AccountsApi.md#tagmanagerAccountsUserPermissionsDelete) | **DELETE** /tagmanager/v2/{path} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsUserPermissionsGet**](docs/AccountsApi.md#tagmanagerAccountsUserPermissionsGet) | **GET** /tagmanager/v2/{path} | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsUserPermissionsList**](docs/AccountsApi.md#tagmanagerAccountsUserPermissionsList) | **GET** /tagmanager/v2/{parent}/user_permissions | 
*TagManagerApi.AccountsApi* | [**tagmanagerAccountsUserPermissionsUpdate**](docs/AccountsApi.md#tagmanagerAccountsUserPermissionsUpdate) | **PUT** /tagmanager/v2/{path} | 


## Documentation for Models

 - [TagManagerApi.Account](docs/Account.md)
 - [TagManagerApi.AccountAccess](docs/AccountAccess.md)
 - [TagManagerApi.AccountFeatures](docs/AccountFeatures.md)
 - [TagManagerApi.BuiltInVariable](docs/BuiltInVariable.md)
 - [TagManagerApi.Client](docs/Client.md)
 - [TagManagerApi.Condition](docs/Condition.md)
 - [TagManagerApi.Container](docs/Container.md)
 - [TagManagerApi.ContainerAccess](docs/ContainerAccess.md)
 - [TagManagerApi.ContainerFeatures](docs/ContainerFeatures.md)
 - [TagManagerApi.ContainerVersion](docs/ContainerVersion.md)
 - [TagManagerApi.ContainerVersionHeader](docs/ContainerVersionHeader.md)
 - [TagManagerApi.CreateBuiltInVariableResponse](docs/CreateBuiltInVariableResponse.md)
 - [TagManagerApi.CreateContainerVersionRequestVersionOptions](docs/CreateContainerVersionRequestVersionOptions.md)
 - [TagManagerApi.CreateContainerVersionResponse](docs/CreateContainerVersionResponse.md)
 - [TagManagerApi.CustomTemplate](docs/CustomTemplate.md)
 - [TagManagerApi.Destination](docs/Destination.md)
 - [TagManagerApi.Entity](docs/Entity.md)
 - [TagManagerApi.Environment](docs/Environment.md)
 - [TagManagerApi.Folder](docs/Folder.md)
 - [TagManagerApi.FolderEntities](docs/FolderEntities.md)
 - [TagManagerApi.GalleryReference](docs/GalleryReference.md)
 - [TagManagerApi.GetContainerSnippetResponse](docs/GetContainerSnippetResponse.md)
 - [TagManagerApi.GetWorkspaceStatusResponse](docs/GetWorkspaceStatusResponse.md)
 - [TagManagerApi.GtagConfig](docs/GtagConfig.md)
 - [TagManagerApi.ListAccountsResponse](docs/ListAccountsResponse.md)
 - [TagManagerApi.ListClientsResponse](docs/ListClientsResponse.md)
 - [TagManagerApi.ListContainerVersionsResponse](docs/ListContainerVersionsResponse.md)
 - [TagManagerApi.ListContainersResponse](docs/ListContainersResponse.md)
 - [TagManagerApi.ListDestinationsResponse](docs/ListDestinationsResponse.md)
 - [TagManagerApi.ListEnabledBuiltInVariablesResponse](docs/ListEnabledBuiltInVariablesResponse.md)
 - [TagManagerApi.ListEnvironmentsResponse](docs/ListEnvironmentsResponse.md)
 - [TagManagerApi.ListFoldersResponse](docs/ListFoldersResponse.md)
 - [TagManagerApi.ListGtagConfigResponse](docs/ListGtagConfigResponse.md)
 - [TagManagerApi.ListTagsResponse](docs/ListTagsResponse.md)
 - [TagManagerApi.ListTemplatesResponse](docs/ListTemplatesResponse.md)
 - [TagManagerApi.ListTransformationsResponse](docs/ListTransformationsResponse.md)
 - [TagManagerApi.ListTriggersResponse](docs/ListTriggersResponse.md)
 - [TagManagerApi.ListUserPermissionsResponse](docs/ListUserPermissionsResponse.md)
 - [TagManagerApi.ListVariablesResponse](docs/ListVariablesResponse.md)
 - [TagManagerApi.ListWorkspacesResponse](docs/ListWorkspacesResponse.md)
 - [TagManagerApi.ListZonesResponse](docs/ListZonesResponse.md)
 - [TagManagerApi.MergeConflict](docs/MergeConflict.md)
 - [TagManagerApi.Parameter](docs/Parameter.md)
 - [TagManagerApi.PublishContainerVersionResponse](docs/PublishContainerVersionResponse.md)
 - [TagManagerApi.QuickPreviewResponse](docs/QuickPreviewResponse.md)
 - [TagManagerApi.RevertBuiltInVariableResponse](docs/RevertBuiltInVariableResponse.md)
 - [TagManagerApi.RevertClientResponse](docs/RevertClientResponse.md)
 - [TagManagerApi.RevertFolderResponse](docs/RevertFolderResponse.md)
 - [TagManagerApi.RevertTagResponse](docs/RevertTagResponse.md)
 - [TagManagerApi.RevertTemplateResponse](docs/RevertTemplateResponse.md)
 - [TagManagerApi.RevertTransformationResponse](docs/RevertTransformationResponse.md)
 - [TagManagerApi.RevertTriggerResponse](docs/RevertTriggerResponse.md)
 - [TagManagerApi.RevertVariableResponse](docs/RevertVariableResponse.md)
 - [TagManagerApi.RevertZoneResponse](docs/RevertZoneResponse.md)
 - [TagManagerApi.SetupTag](docs/SetupTag.md)
 - [TagManagerApi.SyncStatus](docs/SyncStatus.md)
 - [TagManagerApi.SyncWorkspaceResponse](docs/SyncWorkspaceResponse.md)
 - [TagManagerApi.Tag](docs/Tag.md)
 - [TagManagerApi.TagConsentSetting](docs/TagConsentSetting.md)
 - [TagManagerApi.TeardownTag](docs/TeardownTag.md)
 - [TagManagerApi.Transformation](docs/Transformation.md)
 - [TagManagerApi.Trigger](docs/Trigger.md)
 - [TagManagerApi.UserPermission](docs/UserPermission.md)
 - [TagManagerApi.Variable](docs/Variable.md)
 - [TagManagerApi.VariableFormatValue](docs/VariableFormatValue.md)
 - [TagManagerApi.Workspace](docs/Workspace.md)
 - [TagManagerApi.Zone](docs/Zone.md)
 - [TagManagerApi.ZoneBoundary](docs/ZoneBoundary.md)
 - [TagManagerApi.ZoneChildContainer](docs/ZoneChildContainer.md)
 - [TagManagerApi.ZoneTypeRestriction](docs/ZoneTypeRestriction.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/tagmanager.delete.containers: Delete your Google Tag Manager containers
  - https://www.googleapis.com/auth/tagmanager.edit.containers: Manage your Google Tag Manager container and its subcomponents, excluding versioning and publishing
  - https://www.googleapis.com/auth/tagmanager.edit.containerversions: Manage your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.manage.accounts: View and manage your Google Tag Manager accounts
  - https://www.googleapis.com/auth/tagmanager.manage.users: Manage user permissions of your Google Tag Manager account and container
  - https://www.googleapis.com/auth/tagmanager.publish: Publish your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.readonly: View your Google Tag Manager container and its subcomponents

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/tagmanager.delete.containers: Delete your Google Tag Manager containers
  - https://www.googleapis.com/auth/tagmanager.edit.containers: Manage your Google Tag Manager container and its subcomponents, excluding versioning and publishing
  - https://www.googleapis.com/auth/tagmanager.edit.containerversions: Manage your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.manage.accounts: View and manage your Google Tag Manager accounts
  - https://www.googleapis.com/auth/tagmanager.manage.users: Manage user permissions of your Google Tag Manager account and container
  - https://www.googleapis.com/auth/tagmanager.publish: Publish your Google Tag Manager container versions
  - https://www.googleapis.com/auth/tagmanager.readonly: View your Google Tag Manager container and its subcomponents

